test/spec/multi-value/block.txt
;;; TOOL: run-interp-spec
;;; STDIN_FILE: third_party/testsuite/proposals/multi-value/block.wast
;;; ARGS*: --enable-multi-value
(;; STDOUT ;;;
out/test/spec/multi-value/block.wast:275: assert_malformed passed:
  out/test/spec/multi-value/block/block.1.wat:1:96: error: unexpected token (, expected ).
  ...esult i32)))(func (i32.const 0) (block (type $sig) (result i32) (param i32)))
                                                                     ^
out/test/spec/multi-value/block.wast:282: assert_malformed passed:
  out/test/spec/multi-value/block/block.2.wat:1:83: error: unexpected token (, expected ).
  ...esult i32)))(func (i32.const 0) (block (param i32) (type $sig) (result i32)))
                                                        ^
out/test/spec/multi-value/block.wast:289: assert_malformed passed:
  out/test/spec/multi-value/block/block.3.wat:1:96: error: unexpected token (, expected ).
  ...esult i32)))(func (i32.const 0) (block (param i32) (result i32) (type $sig)))
                                                                     ^
out/test/spec/multi-value/block.wast:296: assert_malformed passed:
  out/test/spec/multi-value/block/block.4.wat:1:84: error: unexpected token (, expected ).
  ...esult i32)))(func (i32.const 0) (block (result i32) (type $sig) (param i32)))
                                                         ^
out/test/spec/multi-value/block.wast:303: assert_malformed passed:
  out/test/spec/multi-value/block/block.5.wat:1:84: error: unexpected token (, expected ).
  ...esult i32)))(func (i32.const 0) (block (result i32) (param i32) (type $sig)))
                                                         ^
out/test/spec/multi-value/block.wast:310: assert_malformed passed:
  out/test/spec/multi-value/block/block.6.wat:1:41: error: unexpected token (, expected ).
  (func (i32.const 0) (block (result i32) (param i32)))
                                          ^
out/test/spec/multi-value/block.wast:317: assert_malformed passed:
  out/test/spec/multi-value/block/block.7.wat:1:35: error: unexpected token $x, expected ).
  (func (i32.const 0) (block (param $x i32) (drop)))
                                    ^^
  out/test/spec/multi-value/block/block.7.wat:1:50: error: unexpected token ), expected EOF.
  (func (i32.const 0) (block (param $x i32) (drop)))
                                                   ^
out/test/spec/multi-value/block.wast:321: assert_malformed passed:
  out/test/spec/multi-value/block/block.8.wat:1:25: error: expected 0 results, got 1
  (type $sig (func))(func (block (type $sig) (result i32) (i32.const 0)) (unrea...
                          ^
out/test/spec/multi-value/block.wast:328: assert_malformed passed:
  out/test/spec/multi-value/block/block.9.wat:1:50: error: expected 1 arguments, got 0
  ...func (param i32) (result i32)))(func (block (type $sig) (result i32) (i32....
                                          ^
out/test/spec/multi-value/block.wast:335: assert_malformed passed:
  out/test/spec/multi-value/block/block.10.wat:1:64: error: expected 1 results, got 0
  ...2) (result i32)))(func (i32.const 0) (block (type $sig) (param i32) (drop)...
                                          ^
out/test/spec/multi-value/block.wast:342: assert_malformed passed:
  out/test/spec/multi-value/block/block.11.wat:1:68: error: expected 2 arguments, got 1
  ...2) (result i32)))(func (i32.const 0) (block (type $sig) (param i32) (resul...
                                          ^
out/test/spec/multi-value/block.wast:350: assert_invalid passed:
  error: type mismatch in block, expected [] but got [i32]
  000001c: error: OnEndExpr callback failed
out/test/spec/multi-value/block.wast:358: assert_invalid passed:
  error: type mismatch in implicit return, expected [i32] but got []
  000001c: error: EndFunctionBody callback failed
out/test/spec/multi-value/block.wast:362: assert_invalid passed:
  error: type mismatch in implicit return, expected [i64] but got []
  000001c: error: EndFunctionBody callback failed
out/test/spec/multi-value/block.wast:366: assert_invalid passed:
  error: type mismatch in implicit return, expected [f32] but got []
  000001c: error: EndFunctionBody callback failed
out/test/spec/multi-value/block.wast:370: assert_invalid passed:
  error: type mismatch in implicit return, expected [f64] but got []
  000001c: error: EndFunctionBody callback failed
out/test/spec/multi-value/block.wast:375: assert_invalid passed:
  error: type mismatch in block, expected [] but got [i32]
  000001c: error: OnEndExpr callback failed
out/test/spec/multi-value/block.wast:381: assert_invalid passed:
  error: type mismatch in block, expected [] but got [i32, i32]
  000001e: error: OnEndExpr callback failed
out/test/spec/multi-value/block.wast:387: assert_invalid passed:
  error: type mismatch in block, expected [i32] but got []
  000001b: error: OnEndExpr callback failed
out/test/spec/multi-value/block.wast:393: assert_invalid passed:
  error: type mismatch in block, expected [i32, i32] but got []
  000001c: error: OnEndExpr callback failed
out/test/spec/multi-value/block.wast:399: assert_invalid passed:
  error: type mismatch in block, expected [i32] but got []
  000001c: error: OnEndExpr callback failed
out/test/spec/multi-value/block.wast:405: assert_invalid passed:
  error: type mismatch in block, expected [i32, i32] but got []
  000001d: error: OnEndExpr callback failed
out/test/spec/multi-value/block.wast:411: assert_invalid passed:
  error: type mismatch in block, expected [i32] but got [f32]
  0000020: error: OnEndExpr callback failed
out/test/spec/multi-value/block.wast:417: assert_invalid passed:
  error: type mismatch in block, expected [i32, i32] but got [i32]
  000001e: error: OnEndExpr callback failed
out/test/spec/multi-value/block.wast:423: assert_invalid passed:
  error: type mismatch in block, expected [i32, i32] but got [i32]
  0000020: error: OnEndExpr callback failed
out/test/spec/multi-value/block.wast:429: assert_invalid passed:
  error: type mismatch in block, expected [] but got [i32]
  000001f: error: OnEndExpr callback failed
out/test/spec/multi-value/block.wast:435: assert_invalid passed:
  error: type mismatch in implicit return, expected [i32] but got [i64]
  0000020: error: EndFunctionBody callback failed
out/test/spec/multi-value/block.wast:442: assert_invalid passed:
  error: type mismatch in br, expected [i32] but got []
  000001c: error: OnBrExpr callback failed
out/test/spec/multi-value/block.wast:448: assert_invalid passed:
  error: type mismatch in br, expected [i32, i32] but got []
  000001d: error: OnBrExpr callback failed
out/test/spec/multi-value/block.wast:454: assert_invalid passed:
  error: type mismatch in br, expected [i32] but got []
  000001c: error: OnBrExpr callback failed
out/test/spec/multi-value/block.wast:460: assert_invalid passed:
  error: type mismatch in br, expected [i32, i32] but got []
  000001d: error: OnBrExpr callback failed
out/test/spec/multi-value/block.wast:467: assert_invalid passed:
  error: type mismatch in br, expected [i32] but got []
  000001d: error: OnBrExpr callback failed
out/test/spec/multi-value/block.wast:473: assert_invalid passed:
  error: type mismatch in br, expected [i32, i32] but got []
  000001e: error: OnBrExpr callback failed
out/test/spec/multi-value/block.wast:479: assert_invalid passed:
  error: type mismatch in br, expected [i32] but got [i64]
  000001e: error: OnBrExpr callback failed
out/test/spec/multi-value/block.wast:485: assert_invalid passed:
  error: type mismatch in br, expected [i32, i32] but got [i32]
  000001f: error: OnBrExpr callback failed
out/test/spec/multi-value/block.wast:491: assert_invalid passed:
  error: type mismatch in br, expected [i32, i32] but got [i32]
  0000021: error: OnBrExpr callback failed
out/test/spec/multi-value/block.wast:497: assert_invalid passed:
  error: type mismatch in br, expected [i32] but got []
  000001d: error: OnBrExpr callback failed
out/test/spec/multi-value/block.wast:503: assert_invalid passed:
  error: type mismatch in br, expected [i32, i32] but got []
  000001e: error: OnBrExpr callback failed
out/test/spec/multi-value/block.wast:509: assert_invalid passed:
  error: type mismatch in br, expected [i32] but got [i64]
  000001e: error: OnBrExpr callback failed
out/test/spec/multi-value/block.wast:515: assert_invalid passed:
  error: type mismatch in br, expected [i32, i32] but got [i32]
  000001f: error: OnBrExpr callback failed
out/test/spec/multi-value/block.wast:522: assert_invalid passed:
  error: type mismatch in function, expected [] but got [i32]
  0000024: error: EndFunctionBody callback failed
out/test/spec/multi-value/block.wast:528: assert_invalid passed:
  error: type mismatch in function, expected [] but got [i32, i32]
  000002b: error: EndFunctionBody callback failed
out/test/spec/multi-value/block.wast:534: assert_invalid passed:
  error: type mismatch in br, expected [i32] but got []
  000001e: error: OnBrExpr callback failed
out/test/spec/multi-value/block.wast:540: assert_invalid passed:
  error: type mismatch in br, expected [i32, i32] but got []
  000001f: error: OnBrExpr callback failed
out/test/spec/multi-value/block.wast:546: assert_invalid passed:
  error: type mismatch in br, expected [i32, i32] but got [i32]
  0000021: error: OnBrExpr callback failed
out/test/spec/multi-value/block.wast:553: assert_invalid passed:
  error: type mismatch in br, expected [i32] but got []
  000001f: error: OnBrExpr callback failed
out/test/spec/multi-value/block.wast:559: assert_invalid passed:
  error: type mismatch in br, expected [i32, i32] but got []
  0000020: error: OnBrExpr callback failed
out/test/spec/multi-value/block.wast:565: assert_invalid passed:
  error: type mismatch in br, expected [i32, i32] but got [i32]
  0000021: error: OnBrExpr callback failed
out/test/spec/multi-value/block.wast:574: assert_invalid passed:
  error: type mismatch in i32.ctz, expected [i32] but got []
  000001e: error: OnUnaryExpr callback failed
out/test/spec/multi-value/block.wast:580: assert_invalid passed:
  error: type mismatch in i32.add, expected [i32, i32] but got []
  000001e: error: OnBinaryExpr callback failed
out/test/spec/multi-value/block.wast:586: assert_invalid passed:
  error: type mismatch in i64.ctz, expected [i64] but got []
  000001f: error: OnUnaryExpr callback failed
out/test/spec/multi-value/block.wast:592: assert_invalid passed:
  error: type mismatch in i32.add, expected [i32, i32] but got []
  000001f: error: OnBinaryExpr callback failed
out/test/spec/multi-value/block.wast:598: assert_invalid passed:
  error: type mismatch in i64.ctz, expected [i64] but got []
  0000020: error: OnUnaryExpr callback failed
out/test/spec/multi-value/block.wast:604: assert_invalid passed:
  error: type mismatch in i32.add, expected [i32, i32] but got []
  0000022: error: OnBinaryExpr callback failed
out/test/spec/multi-value/block.wast:611: assert_invalid passed:
  error: type mismatch in block, expected [i32] but got []
  000001d: error: OnBlockExpr callback failed
out/test/spec/multi-value/block.wast:617: assert_invalid passed:
  error: type mismatch in block, expected [i32, f64] but got []
  000001e: error: OnBlockExpr callback failed
out/test/spec/multi-value/block.wast:623: assert_invalid passed:
  error: type mismatch in block, expected [i32] but got [f32]
  0000022: error: OnBlockExpr callback failed
out/test/spec/multi-value/block.wast:629: assert_invalid passed:
  error: type mismatch in block, expected [f32, i32] but got [f32]
  0000023: error: OnBlockExpr callback failed
out/test/spec/multi-value/block.wast:635: assert_invalid passed:
  error: type mismatch in block, expected [i32] but got []
  000001f: error: OnBlockExpr callback failed
out/test/spec/multi-value/block.wast:641: assert_invalid passed:
  error: type mismatch in block, expected [i32, f64] but got []
  0000020: error: OnBlockExpr callback failed
out/test/spec/multi-value/block.wast:647: assert_invalid passed:
  error: type mismatch in block, expected [i32] but got [f32]
  0000024: error: OnBlockExpr callback failed
out/test/spec/multi-value/block.wast:653: assert_invalid passed:
  error: type mismatch in block, expected [f32, i32] but got [f32]
  0000025: error: OnBlockExpr callback failed
out/test/spec/multi-value/block.wast:660: assert_malformed passed:
  out/test/spec/multi-value/block/block.63.wat:1:45: error: unexpected token $x, expected ).
  (func (param i32) (result i32) block (param $x i32) end)
                                              ^^
out/test/spec/multi-value/block.wast:664: assert_malformed passed:
  out/test/spec/multi-value/block/block.64.wat:1:46: error: unexpected token $x, expected ).
  (func (param i32) (result i32) (block (param $x i32)))
                                               ^^
out/test/spec/multi-value/block.wast:669: assert_malformed passed:
  out/test/spec/multi-value/block/block.65.wat:1:17: error: unexpected label "$l"
  (func block end $l)
                  ^^
out/test/spec/multi-value/block.wast:673: assert_malformed passed:
  out/test/spec/multi-value/block/block.66.wat:1:20: error: mismatching label "$a" != "$l"
  (func block $a end $l)
                     ^^
91/91 tests passed.
;;; STDOUT ;;)
